fix(dd-13): address review feedback (CodeQL + Sonar + CodeRabbit)
Reviewed each finding from the three bots and applied the ones with
real grounding. Skipped only those with no actual signal.

CodeQL (3/3 fixed):
* Log injection (DefaultNotificationService:175, :288): added
  sanitizeForLog() helper that strips ASCII control chars; applied
  to requestId / providerName references in the new retry-attempts
  log and the DLQ-failed log.
* Useless parameter (RetryPredicate:30): renamed the unused lambda
  param in DEFAULT to '_' (JEP 456 unnamed-variable). The interface
  contract still passes attempt; only the default's lambda discards it.

SonarCloud (1 hotspot, 9 smells):
* Security Hotspot — ThreadLocalRandom for jitter: annotated // NOSONAR
  with rationale. Backoff jitter is a load-distribution decision,
  not a security boundary; SecureRandom would add contention without
  meaningful benefit.
* BUG — int subtraction passed to Math.pow: explicit (double) cast
  on (attempt - 1) for clarity and overflow-safety.
* CODE_SMELL — duplicated literals "channel" / "message" in
  AdminController: extracted FIELD_CHANNEL and FIELD_MESSAGE
  constants and used them at every callsite.
* CODE_SMELL — Math.max(min, Math.min(max, x)) idiom: replaced with
  Math.clamp(x, min, max) — Java 21+, cleaner.
* CODE_SMELL — DeadLetterStore.record(): renamed to add(). 'record'
  is a Java contextual keyword; using it as a method name reads
  strangely and triggers Sonar's restricted-identifier rule. Updated
  SPI, impl, service callsite, and tests.
* CODE_SMELL — unused 'e' in catch (RetryExecutor:157): renamed to
  '_'. We don't reference the exception, just propagate interruption.
* CODE_SMELL — AssertJ idioms in InMemoryDeadLetterStoreTest:
  hasSizeLessThanOrEqualTo / isZero.

CodeRabbit (8 findings, 6 fixed, 2 already in place):
* Doc backoff formula (DD-13:91): doc said multiplier^n, code uses
  multiplier^(n-1). Fixed doc.
* Future-dated PROGRESS.md entries: added IST timezone mar